# RinseKit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_INSTRUCTIONS.md  README.md  pyproject.toml  vibe.yaml
.github/workflows/: ci.yml
examples/demo_project/: main.py
src/vibe_sweeper/: cli.py  scanner.py
src/vibe_sweeper/analysis/: __init__.py  metrics.py
src/vibe_sweeper/config/: __init__.py  default_rules.yaml
src/vibe_sweeper/detectors/: __init__.py  ai_phrases.py  comments.py
src/vibe_sweeper/refactors/: __init__.py  formatters.py
src/vibe_sweeper/report/: __init__.py  summary.py
tests/: __init__.py  test_cli.py  test_config.py  test_detectors.py  test_report.py  test_scanner.py
